2007-12-18  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Added Italian translation.

=== gvfs 0.0.2 ===

2007-11-15  Alexander Larsson  <alexl@redhat.com>

	* POTFILES.in:
	Remove wrongly added files from failed distcheck

2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * POTFILES.in:
	Added all source files
	
