@@ -1,89 +1,50 @@
 client/gdaemonfile.c
 client/gdaemonfileinputstream.c
-client/gdaemonfileinputstream.c
-client/gdaemonfileoutputstream.c
 client/gdaemonfileoutputstream.c
 client/gdaemonvfs.c
-client/gdaemonvfs.c
-client/gvfsdaemondbus.c
 client/gvfsdaemondbus.c
 common/gmounttracker.c
-common/gmounttracker.c
-common/gsysutils.c
 common/gsysutils.c
 common/gvfsdaemonprotocol.c
-common/gvfsdaemonprotocol.c
-daemon/daemon-main.c
 daemon/daemon-main.c
 daemon/gvfsbackend.c
-daemon/gvfsbackend.c
-daemon/gvfsbackendftp.c
 daemon/gvfsbackendftp.c
 daemon/gvfsbackendsftp.c
-daemon/gvfsbackendsftp.c
-daemon/gvfsbackendsmb.c
 daemon/gvfsbackendsmb.c
 daemon/gvfsbackendsmbbrowse.c
-daemon/gvfsbackendsmbbrowse.c
-daemon/gvfsbackendtest.c
 daemon/gvfsbackendtest.c
 daemon/gvfsbackendtrash.c
-daemon/gvfsbackendtrash.c
-daemon/gvfschannel.c
 daemon/gvfschannel.c
 daemon/gvfsdaemon.c
-daemon/gvfsdaemon.c
-daemon/gvfsdaemonutils.c
 daemon/gvfsdaemonutils.c
 daemon/gvfsjobcloseread.c
-daemon/gvfsjobcloseread.c
-daemon/gvfsjobclosewrite.c
 daemon/gvfsjobclosewrite.c
 daemon/gvfsjobcopy.c
-daemon/gvfsjobcopy.c
-daemon/gvfsjobcreatemonitor.c
 daemon/gvfsjobcreatemonitor.c
 daemon/gvfsjobdbus.c
-daemon/gvfsjobdbus.c
-daemon/gvfsjobdelete.c
 daemon/gvfsjobdelete.c
 daemon/gvfsjobenumerate.c
-daemon/gvfsjobenumerate.c
-daemon/gvfsjobmakedirectory.c
 daemon/gvfsjobmakedirectory.c
 daemon/gvfsjobmakesymlink.c
-daemon/gvfsjobmakesymlink.c
-daemon/gvfsjobmount.c
 daemon/gvfsjobmount.c
 daemon/gvfsjobmountmountable.c
-daemon/gvfsjobmountmountable.c
-daemon/gvfsjobmove.c
 daemon/gvfsjobmove.c
 daemon/gvfsjobopenforread.c
-daemon/gvfsjobopenforread.c
-daemon/gvfsjobopenforwrite.c
 daemon/gvfsjobopenforwrite.c
 daemon/gvfsjobqueryattributes.c
-daemon/gvfsjobqueryattributes.c
-daemon/gvfsjobqueryfsinfo.c
 daemon/gvfsjobqueryfsinfo.c
 daemon/gvfsjobqueryinfo.c
-daemon/gvfsjobqueryinfo.c
-daemon/gvfsjobread.c
 daemon/gvfsjobread.c
 daemon/gvfsjobseekread.c
-daemon/gvfsjobseekread.c
-daemon/gvfsjobseekwrite.c
 daemon/gvfsjobseekwrite.c
 daemon/gvfsjobsetattribute.c
-daemon/gvfsjobsetattribute.c
-daemon/gvfsjobsetdisplayname.c
 daemon/gvfsjobsetdisplayname.c
 daemon/gvfsjobtrash.c
-daemon/gvfsjobtrash.c
-daemon/gvfsjobwrite.c
+daemon/gvfsjobunmount.c
 daemon/gvfsjobwrite.c
 daemon/main.c
-daemon/main.c
 daemon/mount.c
-daemon/mount.c
+hal/ghaldrive.c
+hal/ghalmount.c
+hal/ghalvolume.c
+hal/ghalvolumemonitor.c
